fixed chat messages not showing all the whitespaces

--- a/ChatApp/client/src/App.css
+++ b/ChatApp/client/src/App.css
@@ -97,6 +97,10 @@ body {
   width: 80%;
 }
 
+.messagesContainer li {
+  white-space: pre-wrap;
+}
+
 .fromId,
 .toId {
   list-style: none;
